# acrobot_ilqr_cpp

./: CMakeLists.txt  README.md
include/: acrobot_ilqr.h
include/cppad/: configure.hpp
lib/: libcppad_lib.so.2211
model/: acrobot.xml
src/: acrobot_ilqr.cpp  acrobot_ilqr_test.cpp
src/simulate/: acrobot_mujoco.cc  simulate.cc
